--- a/package.json
+++ b/package.json
@@ -1,12 +1,23 @@
 {
-  "name": "self-app",
+  "name": "@dhkdao/self-app",
+  "license": "MIT",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "description": "Self.xyz plugin prototype",
+  "contributors": [
+    "Jimmy Chu <jimmychu0807@gmail.com> (https://github.com/jimmychu0807)"
+  ],
+  "keywords": [
+    "zk-passport",
+    "on-chain",
+    "self.xyz"
+  ],
+  "engines": {
+    "node": ">=20.0.0"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "scripts": {
+    "dev": "pnpm -r --stream --filter './packages/*' run dev",
+    "lint": "pnpm -r --stream --filter './packages/*' run lint",
+    "build": "pnpm -r --stream --filter './packages/*' run build",
+    "test": "pnpm -r --stream --filter './packages/*' run test"
+  }
 }
