--- a/package.json
+++ b/package.json
@@ -15,9 +15,14 @@
     "node": ">=20.0.0"
   },
   "scripts": {
+    "commit": "pnpm cz",
     "dev": "pnpm -r --stream --filter './packages/*' run dev",
     "lint": "pnpm -r --stream --filter './packages/*' run lint",
     "build": "pnpm -r --stream --filter './packages/*' run build",
     "test": "pnpm -r --stream --filter './packages/*' run test"
+  },
+  "devDependencies": {
+    "commitizen": "^4.3.1",
+    "cz-conventional-changelog": "^3.3.0"
   }
 }
