--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "@dhkdao/self-app",
+  "name": "@dhkdao-self/app",
+  "private": true,
   "license": "MIT",
   "version": "1.0.0",
   "description": "Self.xyz plugin prototype",
@@ -24,5 +25,6 @@
   "devDependencies": {
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0"
-  }
+  },
+  "packageManager": "pnpm@10.14.0"
 }
