--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,8 @@
+DEPLOYER_SK=
 ID_HUB_ADDR=
 SELF_SCOPE=
 SELF_CONFIG_ID=
 
 NEXT_PUBLIC_SELF_APP_NAME=
-NEXT_PUBLIC_SELF_SCOPE=
-NEXT_PUBLIC_SELF_ENDPOINT=
+NEXT_PUBLIC_VERIFICATION_DEPLOYED_ADDR=
+NEXT_PUBLIC_SELF_SCOPE_ID=
