--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,6 +1,11 @@
 packages:
   - packages/*
-
+catalog:
+  concurrently: "^9.2.1"
+  dotenv: "^17.2.1"
+  tsx: "^4.20.5"
+  wait-on: ^8.0.4
+  viem: ^2.33.3
 onlyBuiltDependencies:
   - '@tailwindcss/oxide'
   - sharp
