--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -14,11 +14,15 @@
     "@selfxyz/common": "^0.0.7",
     "@selfxyz/core": "^1.0.8",
     "@selfxyz/qrcode": "^1.0.11",
+    "@tanstack/react-query": "^5.85.5",
+    "clsx": "^2.1.1",
+    "connectkit": "^1.9.1",
     "geist": "^1.4.2",
     "next": "14.2.30",
     "react": "^18",
     "react-dom": "^18",
-    "viem": "catalog:"
+    "viem": "catalog:",
+    "wagmi": "^2.16.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
