--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -6,9 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "tsc && prettier -c . && next lint",
     "ngrok": "ngrok http --url=burro-concise-regularly.ngrok-free.app 3000",
-    "tunnel": "concurrently -n 'next,ngrok' -c auto 'pnpm dev' 'pnpm ngrok'"
+    "tunnel": "concurrently -n 'next,ngrok' -c auto 'pnpm dev' 'pnpm ngrok'",
+    "prettier:fix": "prettier -w ."
   },
   "dependencies": {
     "@headlessui/react": "^2.2.7",
@@ -26,15 +27,16 @@
     "wagmi": "^2.16.6"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
+    "@eslint/eslintrc": "^2",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "concurrently": "catalog:",
-    "eslint": "^9",
-    "eslint-config-next": "15.4.6",
+    "eslint": "^8",
+    "eslint-config-next": "13.2.4",
     "pino-pretty": "^13.1.1",
+    "prettier": "catalog:",
     "tailwindcss": "^4",
     "typescript": "^5"
   },
