--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -6,29 +6,37 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "tsc && prettier -c . && next lint",
     "ngrok": "ngrok http --url=burro-concise-regularly.ngrok-free.app 3000",
-    "tunnel": "concurrently -n 'next,ngrok' -c auto 'pnpm dev' 'pnpm ngrok'"
+    "tunnel": "concurrently -n 'next,ngrok' -c auto 'pnpm dev' 'pnpm ngrok'",
+    "prettier:fix": "prettier -w ."
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.7",
     "@selfxyz/common": "^0.0.7",
     "@selfxyz/core": "^1.0.8",
     "@selfxyz/qrcode": "^1.0.11",
+    "@tanstack/react-query": "^5.85.5",
+    "clsx": "^2.1.1",
+    "connectkit": "^1.9.1",
     "geist": "^1.4.2",
     "next": "14.2.30",
     "react": "^18",
     "react-dom": "^18",
-    "viem": "catalog:"
+    "viem": "catalog:",
+    "wagmi": "^2.16.6"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
+    "@eslint/eslintrc": "^2",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "concurrently": "catalog:",
-    "eslint": "^9",
-    "eslint-config-next": "15.4.6",
+    "eslint": "^8",
+    "eslint-config-next": "13.2.4",
+    "pino-pretty": "^13.1.1",
+    "prettier": "catalog:",
     "tailwindcss": "^4",
     "typescript": "^5"
   },
