--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -6,10 +6,11 @@
   "scripts": {
     "build": "forge build",
     "dev": "pnpm build && conc -n 'node,deploy' -c auto 'pnpm node' 'pnpm deploy:dev'",
-    "node": "anvil -f https://alfajores-forno.celo-testnet.org/",
+    "node": "anvil",
     "test": "forge test",
     "deploy:dev": "wait-on -t 10s tcp:localhost:8545 && forge script script/DeploySelfVerification.s.sol --rpc-url http://localhost:8545 --broadcast",
-    "listenEvents": "tsx lib/listenEvents.ts"
+    "script:listenEvents": "tsx script/listenEvents.ts",
+    "script:testVerificationCompletedEvent": "forge script script/TestVerificationCompletedEvent.sol --rpc-url http://localhost:8545 --private-key 0xac0974bec39a17e36ba4a6b4d238ff944bacb478cbed5efcae784d7bf4f2ff80 --broadcast --sig 'run(string,string,string)'"
   },
   "keywords": [],
   "author": "",
