--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -15,6 +15,7 @@
     "@selfxyz/core": "^1.0.8",
     "@selfxyz/qrcode": "^1.0.11",
     "@tanstack/react-query": "^5.85.5",
+    "abitype": "^1.0.9",
     "clsx": "^2.1.1",
     "connectkit": "^1.9.1",
     "geist": "^1.4.2",
