--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -7,8 +7,6 @@
     "build": "next build",
     "start": "next start",
     "lint": "tsc && prettier -c . && next lint",
-    "ngrok": "ngrok http --url=burro-concise-regularly.ngrok-free.app 3000",
-    "tunnel": "concurrently -n 'next,ngrok' -c auto 'pnpm dev' 'pnpm ngrok'",
     "prettier:fix": "prettier -w ."
   },
   "dependencies": {
@@ -17,6 +15,7 @@
     "@selfxyz/core": "^1.0.8",
     "@selfxyz/qrcode": "^1.0.11",
     "@tanstack/react-query": "^5.85.5",
+    "abitype": "^1.0.9",
     "clsx": "^2.1.1",
     "connectkit": "^1.9.1",
     "geist": "^1.4.2",
@@ -33,6 +32,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "concurrently": "catalog:",
+    "dotenv": "catalog:",
     "eslint": "^8",
     "eslint-config-next": "13.2.4",
     "pino-pretty": "^13.1.1",
