code update before alfajores deployment

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,15 @@ ID_HUB_ADDR=
 SELF_SCOPE=
 SELF_CONFIG_ID=
 
-NEXT_PUBLIC_SELF_APP_NAME=
+NODE_ENV = "development"
+# this env is read in packages/contract and packages/web
 NEXT_PUBLIC_VERIFICATION_DEPLOYED_ADDR=
-NEXT_PUBLIC_SELF_SCOPE_SEED=
+
+NEXT_PUBLIC_SELF_SCOPE_SEED="dhkdao-self-prototype"
+NEXT_PUBLIC_ALCHEMY_ID=
+NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=
+
+# DHK Token deployed on op mainnet:
+# https://optimistic.etherscan.io/token/0xe85d2c93f7e26b99a46a8bb9350cbfb965fa4f82
+NEXT_PUBLIC_DHKTOKEN_ADDR="0xe85d2c93f7e26b99a46a8bb9350cbfb965fa4f82"
+NEXT_PUBLIC_DHKTOKEN_THRESHOLD="1"
